# RoninBot_claude

./: .bot.log.swp  .replit  IMPLEMENTATION_SUMMARY.md  LEADERBOARD_CLEANUP.md  README.md  add_vietnamese_translations.py  alphavantage_api.py  batch_translate.py  bot.py  clean_leaderboard.py  coingecko_api.py  coinmarketcap_api.py  comprehensive_translation_audit.py  config.py  countries_export.csv  direct_translation_fix.py  enable_always_on.md  ex_countrie.csv  finnhub_api.py  fix_translation_mismatches.py  game_handler.py  integrated_server.py  keep_bot_running.md  pyproject.toml  quotes_collector.py  quotes_database.py  rebuild_vietnamese_translations.py  replit.md  replit.nix  response1.txt  response2.txt  run_all.py  run_api_server.py  run_servers.sh  run_whatsapp_server.py  solution_guide.md  test_all_modes.py  test_price_functions.py  test_stock_api.py  test_whatsapp_message.py  (+4 more)
1_quote/: README.md  add_famous_quotes.py  enhanced_quotes_collector.py  quotes_collector.py  setup_quotes_db.py  test_quotes_system.py
android_app/: android_api_client_example.kt  android_app_implementation_details.md  android_app_ui_mockup.md  backend_integration_example.py  implementation_challenges_and_solutions.md  implementation_roadmap.md  kid_friendly_ui_mockup.md  revised_challenges_and_solutions.md  revised_implementation_plan.md  revised_technical_architecture.md  technical_architecture.md
attached_assets/: Pasted-2025-03-10-10-34-22-71-bb75fa69-User-2025-03-10-03-34-22-715-xbot-api-api-INFO-Processing-g-1741577812524.txt
bot_move/: IMAGE_SETUP.md  README.md  bot.py  (+11 more)
(+72 files in other folders)
